codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bug.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 712
expression: rendered
---
▌ Tell us more (bug)
▌
▌ Connectivity diagnostics
▌   No connectivity diagnostics detected.
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
