codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_over_refusal_safety_check.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (over-refusal / safety check)
▌
▌ (optional) Share what was refused and why it should have b

Press enter to confirm or esc to go back
