codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_safety_check.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 726
expression: rendered
---
▌ Tell us more (safety check)
▌
▌ Connectivity diagnostics
▌   No connectivity diagnostics detected.
▌
▌ (optional) Share what was refused and why it should have b

Press enter to confirm or esc to go back
